# space-time-termonal

./: HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
asat/: __init__.py  __main__.py  actions.py  ansi.py  app.py  audio.py  audio_engine.py  audio_sink.py  cell.py  common.py  completion_alert.py  default_bank.py  error_tail.py  event_bus.py  event_log.py  event_log_file.py  events.py  execution.py  execution_worker.py  help_topics.py  hrtf.py  input_router.py  interactive.py  jsonl_logger.py  kernel.py  keyboard.py  keys.py  notebook.py  onboarding.py  outline.py  output_buffer.py  output_cursor.py  output_playback.py  prompt_context.py  runner.py  sample_payloads.py  screen.py  self_check.py  session.py  settings_controller.py  (+12 more)
asat/tools/: __init__.py  dump_bindings.py
docs/: ARCHITECTURE.md  AUDIO.md  BINDINGS.md  CHEAT_SHEET.md  CLAUDE_CODE_MODES.md  DEVELOPER_GUIDE.md  EVENTS.md  FEATURE_REQUESTS.md  HANDOFF.md  SMOKE_TEST.md  USER_MANUAL.md
tests/: soup.py  test_actions.py  test_ansi.py  test_app.py  test_audio.py  test_audio_engine.py  test_audio_sink.py  test_bindings_introspection.py  test_cell.py  test_cli.py  test_completion_alert.py  test_default_bank.py  test_default_bank_orphans.py  test_error_tail.py  test_event_bus.py  test_event_log_file.py  test_event_log_viewer.py  test_events_docs_sync.py  test_events_producer_audit.py  test_execution.py  test_execution_worker.py  test_help_topics.py  test_hrtf.py  test_input_router.py  test_interactive.py  test_jsonl_logger.py  test_kernel.py  test_keyboard.py  test_keys.py  test_metadata.py  test_notebook.py  test_onboarding.py  test_onboarding_tour.py  test_outline.py  test_output_buffer.py  test_output_cursor.py  test_output_playback.py  test_posix_live_sink.py  test_prompt_context.py  test_real_audio_integration.py  (+19 more)
