[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asat"
version = "0.7.0"
description = "Accessible Spatial Audio Terminal"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ASAT contributors" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["asat*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
