[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asat"
version = "0.7.0"
description = "Accessible Spatial Audio Terminal"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ASAT contributors" }]
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.23",
    "pyttsx3>=2.90",
    # tomllib backport for Python 3.10 (stdlib's tomllib landed in 3.11).
    # tests/test_metadata.py needs it to read pyproject.toml; the
    # environment marker limits it to 3.10 runners so newer Pythons
    # don't pull in an unused dep.
    "tomli>=2.0 ; python_version < '3.11'",
]

[tool.setuptools.packages.find]
include = ["asat*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
